Closed
Bug 1869659
Opened 1 year ago
Closed 1 year ago
Crash in [@ mozilla::layers::CanvasTranslator::SetDataSurfaceBuffer]
Categories
(Core :: Graphics: Canvas2D, defect, P1)
Tracking
()
RESOLVED
FIXED
122 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox120 | --- | unaffected |
firefox121 | --- | unaffected |
firefox122 | --- | fixed |
People
(Reporter: aosmond, Assigned: bobowen)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/3cb1d80c-ed62-469b-a38e-3bd6f0231212
MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(mHeader->readerState == State::Paused)
Top 10 frames of crashing thread:
0 xul.dll mozilla::layers::CanvasTranslator::SetDataSurfaceBuffer gfx/layers/ipc/CanvasTranslator.cpp:234
1 xul.dll mozilla::detail::RunnableMethodArguments<mozilla::UniquePtr<void*, mozilla::detail::FileHandleDeleter>&&, unsigned long long>::apply<mozilla::layers::CanvasTranslator, void const xpcom/threads/nsThreadUtils.h:1213
1 xul.dll std::invoke /builds/worker/fetches/vs/VC/Tools/MSVC/14.29.30133/include/type_traits:1534
1 xul.dll std::_Apply_impl /builds/worker/fetches/vs/VC/Tools/MSVC/14.29.30133/include/tuple:974
1 xul.dll std::apply /builds/worker/fetches/vs/VC/Tools/MSVC/14.29.30133/include/tuple:979
1 xul.dll mozilla::detail::RunnableMethodArguments<mozilla::UniquePtr<void*, mozilla::detail::FileHandleDeleter>&&, unsigned long long>::apply xpcom/threads/nsThreadUtils.h:1162
1 xul.dll mozilla::detail::RunnableMethodImpl<mozilla::layers::CanvasTranslator*, void xpcom/threads/nsThreadUtils.h:1213
2 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1193
2 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:480
3 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:300
Flags: needinfo?(bobowencode)
Reporter | ||
Updated•1 year ago
|
Crash Signature: [@ mozilla::layers::CanvasTranslator::SetDataSurfaceBuffer] → [@ mozilla::layers::CanvasTranslator::SetDataSurfaceBuffer]
[@ mozilla::layers::CanvasTranslator::AddBuffer ]
Reporter | ||
Comment 1•1 year ago
|
||
I wonder if this could just be on a failure path, e.g.
https://searchfox.org/mozilla-central/rev/da48f565f70a57ac28862090828fbaa7fd8556f6/gfx/layers/ipc/CanvasTranslator.cpp#331
and maybe we just need to include that in the assert?
Comment 2•1 year ago
|
||
Set release status flags based on info from the regressing bug 1863914
status-firefox120:
--- → unaffected
status-firefox121:
--- → unaffected
status-firefox122:
--- → affected
status-firefox-esr115:
--- → unaffected
Reporter | ||
Comment 3•1 year ago
|
||
Otherwise we should at least make this a gfxCriticalError where we crash but also record the status value.
Assignee | ||
Updated•1 year ago
|
Assignee: nobody → bobowencode
Severity: -- → S4
Status: NEW → ASSIGNED
Flags: needinfo?(bobowencode)
Priority: -- → P1
Assignee | ||
Comment 4•1 year ago
|
||
Pushed by bobowencode@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/770a728fe2b7
Check for Failed in CanvasTranslator::AddBuffer and SetDataSurfaceBuffer. r=aosmond
Comment 6•1 year ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
Reporter | ||
Updated•1 year ago
|
Blocks: accelerated-canvas-recording
You need to log in
before you can comment on or make changes to this bug.
Description
•