Bug 1869659: Check for Failed in CanvasTranslator::AddBuffer and SetDataSurfaceBuffer. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D196287